# sdl-software-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Todo.md
docs/: Memo.md  Roadmap.md
lib/SDL2/macOS/include/: SDL_revision.h
lib/SDL2/macOS/lib/arm64/: libSDL2-2.0.0.dylib
lib/SDL2/macOS/lib/x86_64/: libSDL2-2.0.0.dylib
scripts/: build-macos.sh  build-windows.ps1
skills/sdl-software-renderer-dev/: SKILL.md
skills/sdl-software-renderer-dev/agents/: openai.yaml
src/: Blend.cpp  Blend.hpp  Camera.hpp  Main.cpp  Math.cpp  Math.hpp  RGBA.hpp  SDLProgram.cpp  SDLProgram.hpp  SDLRenderer.cpp  SDLRenderer.hpp
